# semihosting-test

./: Cargo.toml  README.md  board.repl  rust-toolchain.toml  semi-test.resc
.devcontainer/: devcontainer.json
