[package]
edition = "2018"
name = "semihosting-test"
version = "0.1.0"

[[bin]]
name = "semihosting-test"
test = false
bench = false

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
